@@ -154,8 +154,8 @@ public class ThriftBytesWriteSupport extends WriteSupport<BytesWritable> {
     this.configuration = configuration;
     if (this.protocolFactory == null) {
       try {
-        this.protocolFactory = getTProtocolFactoryClass(configuration).newInstance();
-      } catch (InstantiationException | IllegalAccessException e) {
+        this.protocolFactory = getTProtocolFactoryClass(configuration).getDeclaredConstructor().newInstance();
+      } catch (ReflectiveOperationException e) {
         throw new RuntimeException(e);
       }
     }
