@@ -59,14 +59,11 @@ public class TBaseRecordConverter<T extends TBase<?, ?>> extends ThriftRecordCon
           @Override
           public T readOneRecord(TProtocol protocol) throws TException {
             try {
-              T thriftObject = thriftClass.newInstance();
+              T thriftObject = thriftClass.getDeclaredConstructor().newInstance();
               thriftObject.read(protocol);
               return thriftObject;
-            } catch (InstantiationException e) {
+            } catch (ReflectiveOperationException e) {
               throw new ParquetDecodingException("Could not instantiate Thrift " + thriftClass, e);
-            } catch (IllegalAccessException e) {
-              throw new ParquetDecodingException(
-                  "Thrift class or constructor not public " + thriftClass, e);
             }
           }
         },
